<resources>
    <string name="app_name">MadLevel1Task2</string>
    <string name="title">Conjunction (AND)</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="ab">A ^ B</string>
    <string name="True">T</string>
    <string name="False">F</string>
    <string name="submit">Submit</string>
    <string name="correct_message">You got %d answers correct</string>
</resources>